--- a/_locales/zh-cn/MPU6050-strings.json
+++ b/_locales/zh-cn/MPU6050-strings.json
@@ -2,6 +2,9 @@
     "MPU6050.initMPU6050|block": "初始化 设备地址 %addr",
     "MPU6050.restMPU6050|block": "重置 设备地址 %addr",
     "MPU6050.readTempature|block": "读取温度 设备地址 %addr",
+    "MPU6050.setAccelOffset|block": "设置加速度偏差 设备地址|%addr|方向|%axis|偏差 %offset",
+    "MPU6050.setGyroOffset|block": "设置角速度偏差 设备地址|%addr|方向|%axis|偏差 %offset",
     "MPU6050.getAccel|block": "读取加速度 设备地址|%addr|方向 %axis",
-    "MPU6050.getGyro|block": "读取角速度 设备地址|%addr|方向 %axis"
+    "MPU6050.getGyro|block": "读取角速度 设备地址|%addr|方向 %axis",
+    "MPU6050.getAngle|block": "获取倾斜角度 设备地址|%addr|方向 %axis"
 }
